@@ -1,17 +1,18 @@
-[encoding: UTF-8]
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
+[encoding: UTF-8]
 data/mozilla-viewer.glade
 data/playlist.glade
+data/popup.glade
 data/properties.glade
 data/screenshot.glade
 data/skip_to.glade
+data/totem.desktop.in.in.in
 data/totem.glade
 data/totem.schemas.in
 data/uri.glade
-data/vanity.glade
 data/vanity.desktop.in.in
-data/totem.desktop.in.in.in
+data/vanity.glade
 src/bacon-v4l-selection.c
 src/bacon-video-widget-gst.c
 src/bacon-video-widget-properties.c
@@ -20,8 +21,8 @@ src/totem-disc.c
 src/totem-interface.c
 src/totem-mozilla-viewer.c
 src/totem-options.c
-src/totem-playlist.c
 src/totem-pl-parser.c
+src/totem-playlist.c
 src/totem-preferences.c
 src/totem-properties-main.c
 src/totem-screenshot.c
