@@ -1,3 +1,8 @@
+2005-02-19  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Added missing file entry.
+	* sv.po: Updated Swedish translation.
+
 2004-02-19  Maxim Dziumanenko <mvd@mylinux.com.ua>
 
 	* uk.po: Updated Ukrainian translation.
